native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_decommit(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_release(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_find_free_base(
    sogen_dart_app *app, size_t size, uint64_t start, uint64_t *address);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_get_region(
    sogen_dart_app *app, uint64_t address, sogen_dart_memory_region *region);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_get_stats(
    sogen_dart_app *app, sogen_dart_memory_stats *stats);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_memory_get_default_address(sogen_dart_app *app,
                                              uint64_t *address);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_memory_set_default_address(sogen_dart_app *app,
                                              uint64_t address);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_process_info(
    sogen_dart_app *app, sogen_dart_windows_process_info *info);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_current_thread_info(
    sogen_dart_app *app, int32_t *has_value,
    sogen_dart_windows_thread_info *info);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_current_thread_name(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_exit_status(
    sogen_dart_app *app, int32_t *has_value, int32_t *value);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_get_last_stop_reason(sogen_dart_app *app, int32_t *value);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_destroy(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_create_empty(
    const char *emulation_root_utf8, int32_t backend, int32_t disable_logging,
    sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_create_application(
    const char *application_utf8, const char *emulation_root_utf8,
    const char *working_directory_utf8, int32_t backend,
    int32_t disable_logging, sogen_dart_app **out_app);