native/include/generated/sogen_dart_generated.h

typedef int32_t sogen_dart_status;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;
typedef struct sogen_dart_memory_stats {
  uint64_t reserved_memory;
  uint64_t committed_memory;
} sogen_dart_memory_stats;
typedef struct sogen_dart_memory_region {
  uint64_t start;
  uint64_t length;
  int32_t permissions;
  uint64_t allocation_base;
  uint64_t allocation_length;
  int32_t is_reserved;
  int32_t is_committed;
  int32_t initial_permissions;
  int32_t kind;
} sogen_dart_memory_region;
typedef struct sogen_dart_windows_process_info {
  int32_t is_wow64_process;
  int32_t has_exit_status;
  uint32_t exit_status;
  uint64_t live_thread_count;
  uint32_t spawned_thread_count;
  int32_t has_active_thread;
  uint32_t active_thread_id;
} sogen_dart_windows_process_info;
typedef struct sogen_dart_windows_thread_info {
  uint32_t id;
  uint64_t start_address;
  uint64_t argument;
  uint64_t executed_instructions;
  uint64_t current_ip;
  uint64_t previous_ip;
  int32_t setup_done;
  int32_t has_exit_status;
  uint32_t exit_status;
} sogen_dart_windows_thread_info;