lib/src/ffi/sogen_native_bindings.g.dart


  late final _sogen_dart_windows_memory_decommitPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_memory_decommit');
  late final _sogen_dart_windows_memory_decommit =
      _sogen_dart_windows_memory_decommitPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_windows_memory_release(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_windows_memory_release(app, address, size, success);
  }

  late final _sogen_dart_windows_memory_releasePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_memory_release');
  late final _sogen_dart_windows_memory_release =
      _sogen_dart_windows_memory_releasePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_windows_memory_find_free_base(
    ffi.Pointer<sogen_dart_app> app,
    int size,
    int start,
    ffi.Pointer<ffi.Uint64> address,
  ) {
    return _sogen_dart_windows_memory_find_free_base(app, size, start, address);
  }

  late final _sogen_dart_windows_memory_find_free_basePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Size,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_windows_memory_find_free_base');
  late final _sogen_dart_windows_memory_find_free_base =
      _sogen_dart_windows_memory_find_free_basePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int sogen_dart_windows_memory_get_region(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<sogen_dart_memory_region> region,
  ) {
    return _sogen_dart_windows_memory_get_region(app, address, region);
  }

  late final _sogen_dart_windows_memory_get_regionPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<sogen_dart_memory_region>,
          )
        >
      >('sogen_dart_windows_memory_get_region');
  late final _sogen_dart_windows_memory_get_region =
      _sogen_dart_windows_memory_get_regionPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<sogen_dart_memory_region>,
            )
          >();

  int sogen_dart_windows_memory_get_stats(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_memory_stats> stats,
  ) {
    return _sogen_dart_windows_memory_get_stats(app, stats);
  }

  late final _sogen_dart_windows_memory_get_statsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_memory_stats>,
          )
        >
      >('sogen_dart_windows_memory_get_stats');
  late final _sogen_dart_windows_memory_get_stats =
      _sogen_dart_windows_memory_get_statsPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_memory_stats>,
            )
          >();

  int sogen_dart_windows_memory_get_default_address(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Uint64> address,
  ) {
    return _sogen_dart_windows_memory_get_default_address(app, address);
  }

  late final _sogen_dart_windows_memory_get_default_addressPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_windows_memory_get_default_address');
  late final _sogen_dart_windows_memory_get_default_address =
      _sogen_dart_windows_memory_get_default_addressPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Uint64>)
          >();

  int sogen_dart_windows_memory_set_default_address(
    ffi.Pointer<sogen_dart_app> app,
    int address,
  ) {
    return _sogen_dart_windows_memory_set_default_address(app, address);
  }

  late final _sogen_dart_windows_memory_set_default_addressPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>, ffi.Uint64)
        >
      >('sogen_dart_windows_memory_set_default_address');
  late final _sogen_dart_windows_memory_set_default_address =
      _sogen_dart_windows_memory_set_default_addressPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int)>();

  int sogen_dart_windows_get_process_info(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_windows_process_info> info,
  ) {
    return _sogen_dart_windows_get_process_info(app, info);
  }

  late final _sogen_dart_windows_get_process_infoPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_windows_process_info>,
          )
        >
      >('sogen_dart_windows_get_process_info');
  late final _sogen_dart_windows_get_process_info =
      _sogen_dart_windows_get_process_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_windows_process_info>,
            )
          >();

  int sogen_dart_windows_get_current_thread_info(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> has_value,
    ffi.Pointer<sogen_dart_windows_thread_info> info,
  ) {
    return _sogen_dart_windows_get_current_thread_info(app, has_value, info);
  }

  late final _sogen_dart_windows_get_current_thread_infoPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_windows_thread_info>,
          )
        >
      >('sogen_dart_windows_get_current_thread_info');
  late final _sogen_dart_windows_get_current_thread_info =
      _sogen_dart_windows_get_current_thread_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_windows_thread_info>,
            )
          >();

  int sogen_dart_windows_get_current_thread_name(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_windows_get_current_thread_name(app, out_buffer);
  }

  late final _sogen_dart_windows_get_current_thread_namePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_windows_get_current_thread_name');
  late final _sogen_dart_windows_get_current_thread_name =
      _sogen_dart_windows_get_current_thread_namePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_windows_get_exit_status(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> has_value,
    ffi.Pointer<ffi.Int32> value,
  ) {
    return _sogen_dart_windows_get_exit_status(app, has_value, value);
  }

  late final _sogen_dart_windows_get_exit_statusPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_get_exit_status');
  late final _sogen_dart_windows_get_exit_status =
      _sogen_dart_windows_get_exit_statusPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_windows_get_last_stop_reason(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> value,
  ) {
    return _sogen_dart_windows_get_last_stop_reason(app, value);
  }

  late final _sogen_dart_windows_get_last_stop_reasonPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_get_last_stop_reason');
  late final _sogen_dart_windows_get_last_stop_reason =
      _sogen_dart_windows_get_last_stop_reasonPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Int32>)
          >();

  int sogen_dart_windows_destroy(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_windows_destroy(app);
  }

  late final _sogen_dart_windows_destroyPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_windows_destroy');
  late final _sogen_dart_windows_destroy = _sogen_dart_windows_destroyPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_linux_create_empty(
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    int backend,
    int disable_logging,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_linux_create_empty(
      emulation_root_utf8,
      backend,
      disable_logging,
      out_app,
    );
  }

  late final _sogen_dart_linux_create_emptyPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_linux_create_empty');
  late final _sogen_dart_linux_create_empty = _sogen_dart_linux_create_emptyPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
        )
      >();

  int sogen_dart_linux_create_application(
    ffi.Pointer<ffi.Char> application_utf8,
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    ffi.Pointer<ffi.Char> working_directory_utf8,
    int backend,
    int disable_logging,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_linux_create_application(
      application_utf8,
      emulation_root_utf8,
      working_directory_utf8,
      backend,
      disable_logging,
      out_app,
    );
  }
